[package]
name = "ring-io-examples"
version = "0.0.3-pure-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ring-io]
path = "../ring-io"
version = "0.0.3-pure-dev"

[dependencies]
